feat: corrected data on login
